--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Welcome to my hobby website</h1>
+  <h2>About me</2>
+  <h2>My hobby</2>
+  <h2>Community</h2>
 <p>This is a paragraph.</p>
 
 </body>
