--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 
 <h1>Welcome to my hobby website</h1>
   <h2>About me</2>
+  <p>Hey,my name is Samanta. I like horse</p>
+  <p>You can join my zoom</p>
   <h2>My hobby</2>
+  <p>I like horse and horse riding</p>
   <h2>Community</h2>
+  <p>I have support cool and techy community Datorium. Welcome to join us!</p>
 <p>This is a paragraph.</p>
 
 </body>
