--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <title>Samantas hobby</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <body>
 
 <h1>Welcome to my hobby website</h1>
   <h2>About me</2>
