--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <body>
 
-<h1 styel="color:blue;">Welcome to my hobby website</h1>
+<h1 styel="color:blue;background-color=red;">Welcome to my hobby website</h1>
   <h2>About me</2>
   <p>Hey,my name is Samanta. I like horse</p>
   <p>You can join my zoom</p>
