--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Samantas hobby</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  <body>
+  <body style="background-color:#A31818;">
 
-<h1 style="color:blue;background-color=red;">Welcome to my hobby website</h1>
-  <h2>About me</2>
+<h1 style="color:blue;background-color=red;padding:40px;">Welcome to my hobby website</h1>
+  <h2 style="color:yellow;background-color:blue;font-size:60px;padding:20px;">About me</2>
   <p>Hey,my name is Samanta. I like horse</p>
   <p>You can join my zoom</p>
   <h2>My hobby</2>
